# platform.core.api.tethering

./: CMakeLists.txt  ChangeLog  capi-network-tethering.pc.in  dd  project.config  sysinfo-tethering.xml
debian/: changelog  control  rules
doc/: tethering_doc.h
include/: marshal.list  tethering.h  tethering.xml  tethering_private.h
packaging/: capi-network-tethering.changes  capi-network-tethering.spec
src/: tethering.c  tethering_client.c  tethering_private.c
test/: CMakeLists.txt  tethering_test.c
